--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,18 @@
-body {
+* body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
 }
 
 textarea{
-  padding: 10px;
+  padding-bottom: 10px;
   max-width: 100%;
-  white-space:wrap;
+  white-space: wrap;
+  font-size: 1.2rem;
   line-height: 1.5;
-
-  border: 1px solid #ccc;
+  border: 1px solid white;
   box-shadow: 1px 1px 1px #999;
-
+resize: none;
 }
 
 .jumbotron {
@@ -21,6 +21,7 @@ textarea{
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
+  margin-bottom: 20px;
 }
 
 .description{
@@ -28,6 +29,7 @@ textarea{
 }
 
 .time-block{
+  font-size: 1.8rem;
   text-align: center;
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
@@ -66,6 +68,9 @@ textarea{
 
 .saveBtn {
   display: flex;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  font-size: 2.2rem;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -76,8 +81,49 @@ textarea{
   color: white;
 }
 
-.saveBtn i:hover {
-  font-size: 20px;
+.saveBtn:hover {
+  font-size: 2.8rem;
   transition: all .3s ease-in-out;
-  pointer-events: painted;
+  cursor: pointer;
+  
+}
+
+@media only screen and (min-width: 300px) and (max-width: 565px) {
+  .jumbotron {
+    padding: 4rem 2rem;
+  }
+
+  .jumbotron > h1 {
+    font-size: 1.8rem;
+    font-weight: bold;
+  }
+
+  .saveBtn {
+    display: block;
+    height: 55px;
+    padding: 10px;
+    margin-top: 0;
+    margin-bottom: 10px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-top-right-radius: 0;
+    font-size: 2.2rem;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border-left: 1px solid black;
+    background-color: #06AED5;
+    color: white;
+  }
+
+  .time-block{
+    padding: 10px;
+    font-size: 1.8rem;
+    text-align: center;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 0;
+    border-left: 1px dashed black !important;
+    border-right: 1px dashed black !important;
+  }
 }
